# nao-gosto-de-python

./: .gitignore  README.md  requirements.txt
code-to-analyze/: example.c  example.cs  example.java  example.js  example.lua  example.py  example.rs
spicecode-python-test/: pyproject.toml
spicecode-python-test/src/spicecode_python_test/: main.py
