[project]
name = "spicecode-python-test"
version = "0.1.0"
description = ""
authors = [
    {name = "CodyKoInABox",email = "codykoinabox@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tree-sitter (>=0.24.0,<0.25.0)"
]

[tool.poetry]
packages = [{include = "spicecode_python_test", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
