[project]
name = "spicecode-python-test"
version = "0.1.0"
description = ""
authors = [
    {name = "CodyKoInABox",email = "codykoinabox@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tree-sitter (>=0.24.0,<0.25.0)",
    "tree-sitter-python (>=0.23.6,<0.24.0)",
    "tree-sitter-javascript (>=0.23.1,<0.24.0)",
    "tree-sitter-c (>=0.23.5,<0.24.0)",
    "tree-sitter-ruby (>=0.23.1,<0.24.0)",
    "tree-sitter-lua (>=0.2.0,<0.3.0)",
    "tree-sitter-rust (>=0.23.2,<0.24.0)"
]

[tool.poetry]
packages = [{include = "spicecode_python_test", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
